--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "2.13.9",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
+    "sanitize-html": "2.4.0",
     "styled-components": "5.3.0",
     "uuid": "8.3.2",
     "validator": "13.6.0",
